# zero2prod

./: Cargo.toml  Dockerfile  compose.yaml
.github/workflows/: rust.yml
.sqlx/: query-d5ce1e20293615b6fd43fedeeb5330a6bf8dff55852cdc8c6a06ff9c4221a46e.json
configuration/: base.yaml  local.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscription.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
