[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
config = "0.11.0"
dotenv = "0.15.0"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

