[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
config = "0.11.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde-aux = "4.5.0"
sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio", "time", "uuid"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.11"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.10.0", features = ["v4"] }
validator = "0.18.1"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
once_cell = "1"
claim = "0.5"
fake = "~2.3"
quickcheck ="0.9.2"
quickcheck_macros = "0.9.1"
tokio={version = "1",features = ["rt","macros"]}
wiremock = "0.5"
serde_json = "1"